--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<link rel="stylesheet" media="all" href="component/styles/typing.css">
     <link rel="stylesheet" media="all" href="component/styles/input.css">
 	 <link rel="stylesheet" media="all" href="component/style.css">
-  <script src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
+  <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 <script src="component/Bubbles.js"></script>
 <script src="component/script.js"></script>
 
