--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" media="all" href="component/styles/input.css">
 	 <link rel="stylesheet" media="all" href="component/style.css">
   <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
-<script src="component/Bubbles.js"></script>
+<script src="component/mhndbubbles.js"></script>
 <script src="component/script.js"></script>
 
 
