--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div class="chat_header">
       <div class="chat_option">
       <div class="header_img">
-        <img src="https://engmohannadb.github.io/talker/component/avatar.png"/>
+        <img src="component/avatar.png"/>
         </div>
      
       
@@ -34,16 +34,16 @@
 </div>
 
 	 <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
-	<script src="https://engmohannadb.github.io/talker/component/Bubbles.js"></script>
-	<script src="https://engmohannadb.github.io/talker/component/script.js"></script>
+	<script src="component/Bubbles.js"></script>
+	<script src="component/script.js"></script>
 	<link rel="stylesheet" media="all" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,cyrillic"> 
 	<link rel="stylesheet" media="all" href="https://zavoloklom.github.io/material-design-iconic-font/css/docs.md-iconic-font.min.css"> 
-	<link rel="stylesheet" media="all" href="https://engmohannadb.github.io/talker/component/styles/setup.css"> 
-    <link rel="stylesheet" media="all" href="https://engmohannadb.github.io/talker/component/styles/says.css"> 
-    <link rel="stylesheet" media="all" href="https://engmohannadb.github.io/talker/component/styles/reply.css">
-	<link rel="stylesheet" media="all" href="https://engmohannadb.github.io/talker/component/styles/typing.css">
-    <link rel="stylesheet" media="all" href="https://engmohannadb.github.io/talker/component/styles/input.css">
-	<link rel="stylesheet" media="all" href="https://engmohannadb.github.io/talker/component/style.css">
+	<link rel="stylesheet" media="all" href="component/styles/setup.css"> 
+    <link rel="stylesheet" media="all" href="component/styles/says.css"> 
+    <link rel="stylesheet" media="all" href="component/styles/reply.css">
+	<link rel="stylesheet" media="all" href="component/styles/typing.css">
+    <link rel="stylesheet" media="all" href="component/styles/input.css">
+	<link rel="stylesheet" media="all" href="component/style.css">
 	
 
 		 <!---------------chatbot------------->
