--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<script src="component/Bubbles.js"></script>
 	<script src="component/script.js"></script>
 	<link rel="stylesheet" media="all" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,cyrillic"> 
-	<link rel="stylesheet" media="all" href="https://zavoloklom.github.io/material-design-iconic-font/css/docs.md-iconic-font.min.css"> 
+	<!---<link rel="stylesheet" media="all" href="component/styles/docs.md-iconic-font.min.css"> --->
 	<link rel="stylesheet" media="all" href="component/styles/setup.css"> 
     <link rel="stylesheet" media="all" href="component/styles/says.css"> 
     <link rel="stylesheet" media="all" href="component/styles/reply.css">
