rename for cashe

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 	 <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 	<script src="component/Bubbles.js"></script>
 	<script src="component/script.js"></script>
-	<link rel="stylesheet" media="all" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,cyrillic"> 
-	<!---<link rel="stylesheet" media="all" href="component/styles/docs.md-iconic-font.min.css"> --->
+	<!---<link rel="stylesheet" media="all" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,cyrillic"> 
+	<link rel="stylesheet" media="all" href="component/styles/docs.md-iconic-font.min.css"> --->
 	<link rel="stylesheet" media="all" href="component/styles/setup.css"> 
     <link rel="stylesheet" media="all" href="component/styles/says.css"> 
     <link rel="stylesheet" media="all" href="component/styles/reply.css">
 	<link rel="stylesheet" media="all" href="component/styles/typing.css">
     <link rel="stylesheet" media="all" href="component/styles/input.css">
-	<link rel="stylesheet" media="all" href="component/style.css">
+	<link rel="stylesheet" media="all" href="component/style2.css">
 	
 
 		 <!---------------chatbot------------->
