--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </div>
 
   </div>
-<div class="chatlbldiv "><b>تحدث معنا </b><br> كيف يمكننا مساعدتك</div>   
-   <a id="prime" class="fab"><i class="prime zmdi zmdi-comment-outline"></i></a>
+<a ><div class="chatlbldiv "><b>تحدث معنا </b><br> كيف يمكننا مساعدتك</div>   
+  </a>
 	
 </div>
 
