--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   </div>
 <div class="chatlbldiv "><b>تحدث معنا </b><br> كيف يمكننا مساعدتك</div>   
-   <a id="prime" class="fab"><i class="prime zmdi zmdi-comment-outline"></i></a>
+   <a id="prime" class="fab"><i class="prime "></i></a>
 	
 </div>
 
